# composefs-rs

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: examples.yml  publish.yml  rust.yml
doc/: oci.md  repository.md  splitstream.md
examples/: .gitignore  README.md
examples/bls/: Containerfile  Containerfile.arch  Containerfile.ubuntu  build  run
examples/bls/extra/usr/lib/kernel/install.conf.d/: 37composefs.conf
examples/bls/extra/usr/lib/systemd/network/: 37-wired.network
examples/bls/extra/usr/lib/systemd/system/systemd-growfs-root.service.d/: 37-composefs.conf
examples/bls/repart.d/: 02-sysroot.conf
examples/common/: README.md  make-image  run-repart
examples/common/fix-verity/: Containerfile  dracut-hook.sh  fix-verity
examples/uki/: .gitignore  Containerfile  Containerfile.arch  build  fix-verity  make-image  run
examples/uki/extra/usr/lib/dracut/dracut.conf.d/: 37composefs.conf
examples/uki/extra/usr/lib/dracut/modules.d/37composefs/: composefs-pivot-sysroot.service
examples/uki/extra/usr/lib/kernel/install.conf.d/: 37composefs.conf
examples/uki/repart.d/: 01-esp.conf
examples/unified/: Containerfile  build
examples/unified/extra/usr/lib/dracut/modules.d/37composefs/: module-setup.sh
src/: dumpfile.rs  dumpfile_parse.rs  fs.rs  image.rs  lib.rs  main.rs  mount.rs  repository.rs  selabel.rs  splitstream.rs  tar.rs  tmpdir.rs  util.rs
src/fsverity/: digest.rs  ioctl.rs  mod.rs
src/oci/: image.rs  mod.rs  tar.rs
src/tests/assets/: special.dump
tests/: repo.rs
