[package]
name = "composefs_experiments"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.19", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
rustix = { version = "0.38.37", features = ["fs", "mount", "process"] }
sha2 = "0.10.8"
tar = "0.4.42"
zstd = "0.13.2"

[dev-dependencies]
tempfile = "3.13.0"

[profile.dev.package.sha2]
# this is *really* slow otherwise
opt-level = 3

[lib]
name = "composefs_experiments"
path = "src/lib.rs"
