[package]
name = "composefs"
version = "0.2.0"
edition = "2021"
description = "Rust library for the composefs filesystem"
keywords = ["composefs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/composefs-rs"
readme = "README.md"
default-run = "cfsctl"
exclude = ["/.git*", "/examples/"]

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
async-compression = { version = "0.4.17", default-features = false, features = ["tokio", "gzip"] }
clap = { version = "4.5.19", default-features = false, features = ["std", "help", "usage", "derive"] }
containers-image-proxy = "0.7.0"
hex = "0.4.3"
indicatif = { version = "0.17.8", features = ["tokio"] }
oci-spec = "0.7.0"
regex-automata = { version = "0.4.8", default-features = false }
rustix = { version = "0.38.37", features = ["fs", "mount", "process"] }
sha2 = "0.10.8"
tar = { version = "0.4.42", default-features = false }
tempfile = "3.13.0"
tokio = "1.41.0"
zstd = "0.13.2"

[dev-dependencies]

[profile.dev.package.sha2]
# this is *really* slow otherwise
opt-level = 3

[lib]
name = "composefs"
path = "src/lib.rs"
